[metadata]
name = imm-sim
version = 0.0.1
description = 
long_description = file: README.md
author = Yoonyoung Cho
author_email = yoonyoung.cho@kaist.ac.kr
keywords = pybullet, simulation, robotics
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
package_dir =
    = src
packages = find_namespace:
include_package_data=True
python_requires = >=3.6
setup_requires =
    setuptools >= 41.2.0
install_requires =
    pybullet

[options.package_data]
* = data/*

[options.packages.find]
where = src
include = imm.*
